2010-12-03  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Darin Adler.

        REGRESSION(r72783): DOMActivate fires multiple times from input type=file
        https://bugs.webkit.org/show_bug.cgi?id=50396

        * fast/events/shadow-boundary-crossing-2-expected.txt: Changed expectations.
        * fast/events/shadow-boundary-crossing-2.html: Added the correct test for event
            retargeting, renamed previous test to be more specific in what it tests.
2010-12-03  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        REGRESSION(r72783): DOMActivate fires multiple times from input type=file
        https://bugs.webkit.org/show_bug.cgi?id=50396

        Test: fast/events/shadow-boundary-crossing-2.html

        * dom/EventContext.cpp: Reverted changes made in r72783.
        * dom/EventContext.h: Ditto.
        * dom/Node.cpp:
        (WebCore::Node::containsIncludingShadowDOM): Added.
        (WebCore::Node::dispatchGenericEvent): Reverted changes made in r72783.
        * dom/Node.h: Added decl.
        * html/HTMLLabelElement.cpp:
        (WebCore::HTMLLabelElement::defaultEventHandler): Reverted changes made in r72783.

Canonical link: https://commits.webkit.org/63695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73270 268f45cc-cd09-0410-ab3c-d52691b4dbfc